argocd-apps/jupyter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyter
  labels:
    name: jupyter
