argocd-apps/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
  namespace: jupyter
  labels:
    app: jupyter-notebook
spec:
  selector:
    app: jupyter-notebook
  ports:
  - port: 8888
    targetPort: 8888
    name: http
  type: ClusterIP
